@@ -8,12 +8,14 @@ import com.hotel.app.model.User;
 import com.hotel.app.repository.DataRecoveryRepository;
 import com.hotel.app.repository.ReservationRepository;
 import com.hotel.app.repository.UserRepository;
+import com.hotel.app.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,10 +25,11 @@ public class DataRecoveryService {
     private final ReservationRepository reservationRepository;
     private final UserRepository userRepository;
 
+    // ✅ CORREGIDO: Declara y retorna List<DTO>
     public List<DataRecoveryResponseDTO> findAll() {
         return dataRecoveryRepository.findAll().stream()
                 .map(this::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Optional<DataRecoveryResponseDTO> findById(Long id) {
@@ -36,14 +39,15 @@ public class DataRecoveryService {
 
     @Transactional
     public DataRecoveryResponseDTO create(CreateDataRecoveryDTO dto) {
+        Reservation reservation = reservationRepository.findById(dto.reservationId())
+                .orElseThrow(() -> new ResourceNotFoundException("Reservation", dto.reservationId()));
+        User user = userRepository.findById(dto.userId())
+                .orElseThrow(() -> new ResourceNotFoundException("User", dto.userId()));
+
         DataRecovery dataRecovery = new DataRecovery();
         dataRecovery.setOccupationDate(dto.occupationDate());
-
-        reservationRepository.findById(dto.reservationId())
-                .ifPresent(dataRecovery::setReservation);
-
-        userRepository.findById(dto.userId())
-                .ifPresent(dataRecovery::setUser);
+        dataRecovery.setReservation(reservation);
+        dataRecovery.setUser(user);
 
         DataRecovery saved = dataRecoveryRepository.save(dataRecovery);
         return toResponseDTO(saved);
@@ -54,14 +58,15 @@ public class DataRecoveryService {
         dataRecoveryRepository.deleteById(id);
     }
 
-    private DataRecoveryResponseDTO toResponseDTO(DataRecovery dataRecovery) {
+    // ✅ MAPPER: Entity → DTO
+    private DataRecoveryResponseDTO toResponseDTO(DataRecovery entity) {
         return new DataRecoveryResponseDTO(
-                dataRecovery.getId(),
-                dataRecovery.getOccupationDate(),
-                dataRecovery.getReservation() != null ? dataRecovery.getReservation().getId() : null,
-                dataRecovery.getReservation() != null ? dataRecovery.getReservation().getCode() : null,
-                dataRecovery.getUser() != null ? dataRecovery.getUser().getId() : null,
-                dataRecovery.getUser() != null ? dataRecovery.getUser().getName() : null
+                entity.getId(),
+                entity.getOccupationDate(),
+                entity.getReservation() != null ? entity.getReservation().getId() : null,
+                entity.getReservation() != null ? entity.getReservation().getCode() : null,
+                entity.getUser() != null ? entity.getUser().getId() : null,
+                entity.getUser() != null ? entity.getUser().getName() : null
         );
     }
 }
