@@ -7,12 +7,14 @@ import com.hotel.app.model.Hotel;
 import com.hotel.app.model.User;
 import com.hotel.app.repository.HotelRepository;
 import com.hotel.app.repository.UserRepository;
+import com.hotel.app.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +26,7 @@ public class HotelService {
     public List<HotelResponseDTO> findAll() {
         return hotelRepository.findAll().stream()
                 .map(this::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Optional<HotelResponseDTO> findById(Long id) {
@@ -34,14 +36,19 @@ public class HotelService {
 
     @Transactional
     public HotelResponseDTO create(CreateHotelDTO dto) {
+        if (hotelRepository.existsByCode(dto.code())) {
+            throw new RuntimeException("Hotel code already exists: " + dto.code());
+        }
+
         Hotel hotel = new Hotel();
         hotel.setName(dto.name());
         hotel.setCode(dto.code());
         hotel.setRoomQuantity(dto.roomQuantity());
 
         if (dto.administratorId() != null) {
-            userRepository.findById(dto.administratorId())
-                    .ifPresent(hotel::setAdministrator);
+            User admin = userRepository.findById(dto.administratorId())
+                    .orElseThrow(() -> new ResourceNotFoundException("User", dto.administratorId()));
+            hotel.setAdministrator(admin);
         }
 
         Hotel saved = hotelRepository.save(hotel);
@@ -52,15 +59,14 @@ public class HotelService {
     public Optional<HotelResponseDTO> update(Long id, UpdateHotelDTO dto) {
         return hotelRepository.findById(id)
                 .map(existing -> {
-                    existing.setName(dto.name());
-                    existing.setCode(dto.code());
-                    existing.setRoomQuantity(dto.roomQuantity());
-
+                    if (dto.name() != null) existing.setName(dto.name());
+                    if (dto.code() != null) existing.setCode(dto.code());
+                    if (dto.roomQuantity() != null) existing.setRoomQuantity(dto.roomQuantity());
                     if (dto.administratorId() != null) {
-                        userRepository.findById(dto.administratorId())
-                                .ifPresent(existing::setAdministrator);
+                        User admin = userRepository.findById(dto.administratorId())
+                                .orElseThrow(() -> new ResourceNotFoundException("User", dto.administratorId()));
+                        existing.setAdministrator(admin);
                     }
-
                     return toResponseDTO(hotelRepository.save(existing));
                 });
     }
@@ -79,7 +85,7 @@ public class HotelService {
                 hotel.getAdministrator() != null ? hotel.getAdministrator().getId() : null,
                 hotel.getAdministrator() != null ? hotel.getAdministrator().getName() : null,
                 hotel.getRooms() != null ? hotel.getRooms().size() : 0,
-                null // createdAt (agregar si tienes @CreatedDate)
+                null
         );
     }
 }
